--- a/resources/main.kv
+++ b/resources/main.kv
@@ -5,13 +5,23 @@
             title: "Machi"
             elevation: 12
             type: "top"
-            right_action_items: [["penguin", lambda github: app.open_repo()]]
-            
+            left_action_items: [["penguin", lambda github: app.open_repo()]]
+            MDSwitch:
+                key: "switch"
+                on_active: app.setbg(*args)
+                size_hint: None, None
+                pos_hint: {'x': .1, 'center_y': .5}
+                thumb_color: "#EC407A"
+            MDLabel:
+                text:""
+                size_hint: 0.1, None
+
+
         MDFloatLayout:
             MDTextField:
                 id: input_path
                 icon_right: 'folder-open-outline'
-                icon_right_color: rgba("#EC407A")
+                icon_right_color: "#EC407A"
                 hint_text: "Input Path"
                 mode: "rectangle"
                 color_mode: "custom"
