--- a/resources/main.kv
+++ b/resources/main.kv
@@ -21,20 +21,20 @@
             orientation:'vertical'
             size_hint_y:0.6
             padding: 20
-            spacing: 20
+            spacing: 30
             MDLabel:
                 text:"Machi"
                 halign: "center"
                 font_style: 'H1'
             MDTextField:
-                id: input_path_box
-                icon_right: 'folder-open-outline'
+                id: output-name-box
+                icon_right: 'rename-box'
                 icon_right_color: "#EC407A"
-                hint_text: "Input Path"
+                hint_text: "Output name"
                 mode: "rectangle"
                 color_mode: "custom"
-                pos_hint: {"center_x":0.5, "center_y":0.3}
-                size_hint_x: .8
+                pos_hint: {"center_x":0.5, "center_y":0.1}
+                size_hint_x: .92
                 height: "30dp"
 
 
