✅ add: splitter function to gui

--- a/resources/main.kv
+++ b/resources/main.kv
@@ -92,6 +92,8 @@
                 font_name: "RobotoBlack"
                 font_style: "Button"
                 line_width: 1.1
+                on_release:
+                    app.call_splitter()
             MDRectangleFlatIconButton:
                 size_hint_y:1
                 size_hint_x:1
