--- a/resources/main.kv
+++ b/resources/main.kv
@@ -69,6 +69,9 @@
                 font_name: "RobotoBlack"
                 font_style: "Button"
                 line_width: 1.1
+                on_release:
+                    app.call_stitcher()
+                    
             MDRectangleFlatIconButton:
                 size_hint_y:1
                 size_hint_x:1
