☠ example: kivy variable binding

--- a/Machi.kv
+++ b/Machi.kv
@@ -1,8 +1,15 @@
 MDBoxLayout:
-
-    joey: joey
-
     orientation: "vertical"
+
+    MDLabel:
+        text: "testing bish"
+        id: bish
+
+    MDRectangleFlatButton:
+        test:"hihih"
+        on_release:
+            app.yoda()
+
     MDToolbar:
         title: "Machi"
         elevation: 12
